Updated requirements, fixed percentage of gain in the notebook

--- a/notebooks/result_analysis.ipynb
+++ b/notebooks/result_analysis.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +187,14 @@
      "output_type": "stream",
      "text": [
       "The gain amount is 48.89 out of 1000 units of money invested\n",
-      "The gain amount in percentage is 12.13%\n"
+      "The gain amount in percentage is 4.89%\n"
      ]
     }
    ],
    "source": [
     "# Compute the gain\n",
     "gain = win_amount - lose_amount\n",
-    "gain_perc = gain / win_amount\n",
+    "gain_perc = gain / c\n",
     "print(f'The gain amount is {gain:.2f} out of {c} units of money invested')\n",
     "print(f'The gain amount in percentage is {100*gain_perc:.2f}%')"
    ]
